--- a/deploy/config.yml
+++ b/deploy/config.yml
@@ -85,7 +85,7 @@ agent:
 
 review:
   file_filter:
-    max_file_size: 10000  # Skip files larger than this (in characters)
+    max_file_size: 1000000  # Skip files larger than this (in characters)
     allowed_extensions:
       - ".go"
       - ".js"
@@ -122,10 +122,11 @@ review:
       - "*.bundle.js"
       - "*.generated.*"
     include_only_code: false
-  max_files_per_mr: 50
+  max_files_per_mr: 500
   update_description_on_mr: true
-  enable_description_generation: true
-  enable_changes_overview_generation: true
-  enable_code_review: true
+  enable_description_generation: false
+  enable_changes_overview_generation: false
+  enable_architecture_review: true
+  enable_code_review: false
   min_files_for_description: 3
   processing_delay: 5s 
